--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>just test</title>
+	  <a href="Cip.html" target=_blank><button type=button >Birthday List </button></a>
   </head>
   <body>
 	<h1>Hello world!</h1>
