--- a/english_notes.html
+++ b/english_notes.html
@@ -71,7 +71,7 @@
     <p>It so happened-lesson-1<br>
     </br>How the Camel got his hump</p>
     <p>
-        <a class="itso1" href="english_notes/It_so_happened_lesson_1.pdf" target="_blank"><img class="itso1image" src="english_notes/it_so_happened_thumbnail.png"></a>
+        <a class="itso1" href="It_so_happened_lesson_1.pdf" target="_blank"><img class="itso1image" src="it_so_happened_thumbnail.png"></a>
     </p>
   </body>
   <script src="scripts.js"></script>
