--- a/studentslist.html
+++ b/studentslist.html
@@ -10,6 +10,9 @@
       <a class="navbarhome" href="index.html"
         ><button class="navbarhome" type="button">Home</button></a
       >
+      <a class="navbaricon" href="birthdaylist.html"
+        ><button class="navbaricons" type="button">birthday list</button></a
+      >
       <a class="navbaricon" href="index.html"
         ><button class="navbaricons" type="button">back</button></a
       >
