--- a/science_notes.html
+++ b/science_notes.html
@@ -72,6 +72,10 @@
       h1 {
         color: white;
       }
+      .info {
+        color: orangered;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
     </style>
   </head>
   <body>
