--- a/birthdaylist.html
+++ b/birthdaylist.html
@@ -476,6 +476,57 @@
         p.innerHTML = "this student's birthday is over";
         q.innerHTML = 2 - x;
       }
+      if (a.innerHTML == -1) {
+        a.innerHTML = "today is adharsh's birthday, dont forgot to wish him!"
+      }
+      if (b.innerHTML == -1) {
+        b.innerHTML = "today is balaji's birthday, dont forgot to wish him!"
+      }
+      if (c.innerHTML == -1) {
+        c.innerHTML = "today is dhikshan's birthday, dont forgot to wish him!"
+      }
+      if (d.innerHTML == -1) {
+        d.innerHTML = "today is gokul's birthday, dont forgot to wish him!"
+      }
+      if (e.innerHTML == -1) {
+        e.innerHTML = "today is harsha's birthday, dont forgot to wish him!"
+      }
+      if (f.innerHTML == -1) {
+        f.innerHTML = "today is joshuva's birthday, dont forgot to wish him!"
+      }
+      if (g.innerHTML == -1) {
+        g.innerHTML = "today is keerthivasan's birthday, dont forgot to wish him!"
+      }
+      if (h.innerHTML == -1) {
+        h.innerHTML = "today is mithran's birthday, dont forgot to wish him!"
+      }
+      if (i.innerHTML == -1) {
+        i.innerHTML = "today is nitin's birthday, dont forgot to wish him!"
+      }
+      if (j.innerHTML == -1) {
+        j.innerHTML = "today is praveen's birthday, dont forgot to wish him!"
+      }
+      if (k.innerHTML == -1) {
+        k.innerHTML = "today is sanjay's birthday, dont forgot to wish him!"
+      }
+      if (l.innerHTML == -1) {
+        l.innerHTML = "today is shaswad's birthday, dont forgot to wish him!"
+      }
+      if (m.innerHTML == -1) {
+        m.innerHTML = "today is seshavardhan's birthday, dont forgot to wish him!"
+      }
+      if (n.innerHTML == -1) {
+        n.innerHTML = "today is srivarshan's birthday, dont forgot to wish him!"
+      }
+      if (o.innerHTML == -1) {
+        o.innerHTML = "today is saichiranjeevi's birthday, dont forgot to wish him!"
+      }
+      if (p.innerHTML == -1) {
+        p.innerHTML = "today is tinakaran's birthday, dont forgot to wish him!"
+      }
+      if (q.innerHTML == -1) {
+        q.innerHTML = "today is vishnu's birthday, dont forgot to wish him!"
+      }
     }, 10);
   </script>
 </html>
