--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
   <body>
     <style>
       body {
-        background-image: url(https://st2.depositphotos.com/1092019/7397/i/600/depositphotos_73972199-stock-photo-contributors-concept-with-word-on.jpg);
+        background-image: url(https://cdn.pixabay.com/photo/2016/03/11/08/02/usa-1249880__340.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: inherit;
@@ -59,7 +59,8 @@
     </style>
     <h1>About us</h1>
     <p class="contributors">
-      contributors: nitin kamal.p.k, vishnu vikram, sanjay.p
+      creater and developer: Nitin Kamal.P.K
+      co-founder and co-developer: Vishnu Vikram
     </p>
   </body>
 </html>
