--- a/english_notes.html
+++ b/english_notes.html
@@ -74,6 +74,11 @@
     <p>
         <a class="itso1" href="It_so_happened_lesson_1.pdf" target="_blank"><img class="itso1image" src="it_so_happened_thumbnail.png"></a>
     </p>
+ <p>Honeydew-lesson-2-poem<br>
+    </br>Geography Lesson</p>
+    <p>
+        <a class="itso1" href="Ch-2-poem-geography lesson.pdf" target="_blank"><img class="itso1image" src="Screenshot_2022-08-09-07-50-09-395.jpeg"></a>
+    </p>
   </body>
   <script src="scripts.js"></script>
 </html>
