--- a/english_notes.html
+++ b/english_notes.html
@@ -77,7 +77,7 @@
  <p>Honeydew-lesson-2-poem<br>
     </br>Geography Lesson</p>
     <p>
-        <a class="itso1" href="Ch-2-poem-geography lesson.pdf" target="_blank"><img class="itso1image" src="Screenshot_2022-08-09-07-50-09-395.jpeg"></a>
+        <a class="itso1" href="Ch-2-poem-geography-lesson.pdf" target="_blank"><img class="itso1image" src="Screenshot_2022-08-09-07-50-09-395.jpeg"></a>
     </p>
   </body>
   <script src="scripts.js"></script>
