--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a class="navbaricon" href="studentslist.html"
         ><button class="navbaricons" type="button">students list</button></a
       >
-      <a class="navbaricon" href="mailto:codersassemble@gmail.com"
+      <a class="navbaricon" href="contact_us.html"
         ><button class="navbaricons" type="button">contact us</button></a
       >
       <a class="navbaricon" href="about.html"
