--- a/contact_us.html
+++ b/contact_us.html
@@ -1,5 +1,15 @@
 <doctype HTML>
   <html>
+    <link rel="stylesheet" href="styles.css" />
+
+    <link rel="icon" type="image/x-icon" href="download.jpeg" />
+
+    <meta charset="UTF-8" />
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <head>
       <a href="mailto:vishnuvikram828@gmail.com" target=_blank><button>Vishnu Vikram</button></a>
       <br>
