--- a/contact_us.html
+++ b/contact_us.html
@@ -9,6 +9,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    "<title>Contact Us</title>
+
+    <p>
+
+      <a class="navbarhome" href="index.html"
+
+        ><button class="navbarhome" type="button">Home</button></a
+
+      >
+
+      <a class="navbaricon" href="index.html"
+
+        ><button class="navbaricons" type="button">back</button></a
+
+      >
+
+ 
 
     <head>
       <a href="mailto:vishnuvikram828@gmail.com" target=_blank><button>Vishnu Vikram</button></a>
