--- a/contact_us.html
+++ b/contact_us.html
@@ -13,9 +13,9 @@
 
     <p>
 
-      <a class="navbarhome" href="index.html"
+      <a class="navbaricon" href="index.html"
 
-        ><button class="navbarhome" type="button">Home</button></a
+        ><button class="navbaricons" type="button">Home</button></a
 
       >
 
