--- a/contact_us.html
+++ b/contact_us.html
@@ -1,36 +1,56 @@
-<doctype HTML>
-  <html>
+<!DOCTYPE html>
+<html>
+  <head>
     <link rel="stylesheet" href="styles.css" />
-
     <link rel="icon" type="image/x-icon" href="download.jpeg" />
-
     <meta charset="UTF-8" />
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    "<title>Contact Us</title>
-
+    "
+    <title>Contact Us</title>
     <p>
-
       <a class="navbaricon" href="index.html"
-
         ><button class="navbaricons" type="button">Home</button></a
-
       >
-
       <a class="navbaricon" href="index.html"
-
         ><button class="navbaricons" type="button">back</button></a
-
       >
-      <strong> <br></strong>
-
- 
-
-    <head>
-      <a href="mailto:vishnuvikram828@gmail.com" target=_blank><button>Vishnu Vikram</button></a>
-      <br>
-      <a href="mailto:nitinipun2110@gmail.com" target=_blank><button>Nitin Kamal</button></a>
-              </head>
-                </html>
+    </p>
+    <style>
+      .emailvishnu {
+        cursor: pointer;
+        width: 136px;
+        height: 34px;
+        border-radius: 10px;
+        transition: 0.3s;
+        border-style: hidden;
+        margin-bottom: 20px;
+        margin-top: 40px;
+      }
+      .emailvishnu:hover {
+        border: 2px solid blue;
+        font-size: 18px;
+      }
+      .emailnitin {
+        cursor: pointer;
+        width: 136px;
+        height: 34px;
+        border-radius: 10px;
+        transition: 0.3s;
+        border-style: hidden;
+      }
+      .emailnitin:hover {
+        font-size: 18px;
+        border: 2px solid blue;
+      }
+    </style>
+  </head>
+  <body>
+    <a href="mailto:vishnuvikram828@gmail.com"
+      ><button class="emailvishnu" type="button">Vishnu Vikram</button></a
+    ><br />
+    <a href="mailto:nitinipun2110@gmail.com"
+      ><button class="emailnitin" type="button">Nitin Kamal.P.K</button></a
+    >
+  </body>
+</html>
