--- a/about.html
+++ b/about.html
@@ -60,8 +60,9 @@
     </style>
     <h1>About us</h1>
     <p class="contributors">
-      creater and developer: Nitin Kamal.P.K
-      co-founder and co-developer: Vishnu Vikram
+      co-founder and developer: Nitin Kamal.P.K
+      <br>
+      founder and developer: Vishnu Vikram
     </p>
   </body>
 </html>
