--- a/maths_notes.html
+++ b/maths_notes.html
@@ -2,5 +2,10 @@
 <html>
   <head>
     
+    <p>
+      <a class="navbarhome" href="#"
+        ><button class="navbarhome" type="button">Home</button></a
+      >
+    </p>
   </head>
 </html>
