--- a/maths_notes.html
+++ b/maths_notes.html
@@ -1,10 +1,18 @@
 <!doctypeHTML>
 <html>
   <head>
-    
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/x-icon" href="favicon-32x32.png" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>science notes</title>
     <p>
-      <a class="navbarhome" href="#"
+      <a class="navbarhome" href="index.html"
         ><button class="navbarhome" type="button">Home</button></a
+      >
+      <a class="navbarhome" href="subjects.html"
+        ><button class="navbarhome" type="button">back</button></a
       >
     </p>
   </head>
