--- a/maths_notes.html
+++ b/maths_notes.html
@@ -15,5 +15,9 @@
         ><button class="navbarhome" type="button">back</button></a
       >
     </p>
+    <style>
+      body {
+        background-image: url(134853-vertical-math-backgrounds-1920x1200.jpg);
+    </style>
   </head>
 </html>
