--- a/maths_notes.html
+++ b/maths_notes.html
@@ -1,24 +1,19 @@
-<!doctypeHTML>
-<html>
+"<!DOCTYPE html>
+<html lang="en">
   <head>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/x-icon" href="favicon-32x32.png" />
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="134853-vertical-math-backgrounds-1920x1200.jpg" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>science notes</title>
+    <title>english notes</title>
     <p>
       <a class="navbarhome" href="index.html"
         ><button class="navbarhome" type="button">Home</button></a
       >
-      <a class="navbarhome" href="subjects.html"
-        ><button class="navbarhome" type="button">back</button></a
+      <a class="navbaricon" href="subjects.html"
+        ><button class="navbaricons" type="button">back</button></a
       >
-    </p>
-    <style>
-      body {
-        background-image: url(134853-vertical-math-backgrounds-1920x1200.jpg);
-      }
-    </style>
-  </head>
-</html>
+      
+      
+
