--- a/maths_notes.html
+++ b/maths_notes.html
@@ -16,9 +16,9 @@
       >
       <p> this is where you download maths notes</p>
     
-       <p>Honeydew-lesson-2-poem<br>
+       <p>Chapter 1 <br>
 
-    </br>Geography Lesson</p>
+    </br>Rational numbers</p>
 
     <p>
 
