--- a/subjects.html
+++ b/subjects.html
@@ -73,7 +73,7 @@
         ><button class="subject" type="button">English</button></a
       >
       <a class="subscie" href="science_notes.html"><button class="subsci" type="button">Science</button></a>
-      <a class="subsci" href="maths_notes.html"><button class="subsci" type="button">mathematics</button></a>
+      <a class="subscie" href="maths_notes.html"><button class="subsci" type="button">mathematics</button></a>
     </p>
   </body>
   <script src="scripts.js"></script>
