--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <a class="navbaricon" href="subjects.html"
         ><button class="navbaricons" type="button">subject notes</button></a
       >
+      <a class="navbaricon" href="textbooks.html"
+         ><button class="navbaricons" type="button">text books</button></a
+      >
       <a class="navbaricon" href="schedule for web.pdf" target="_blank"
         ><button class="navbaricons" type="button">schedule</button></a
       >
