--- a/textbooks.html
+++ b/textbooks.html
@@ -39,11 +39,10 @@
   </head>
   <body>
     <p class="title_subjects">English</p>
-      <a href="English.zip" 
+      <a href="English.zip" download
         ><button class="bookeng" type="button">English Honeydew</button></a
       >
-      <a href="English/it so happend" download="It So Happened"><button class="bookeng" type="button">English It So Happened</button></a>
-    <p class="title_subjects">Mathematics</p>
+
     <a href="Mathematics" download><button class="bookeng">Mathematics book</button></a>
   </body>
 </html>
