--- a/textbooks.html
+++ b/textbooks.html
@@ -43,6 +43,6 @@
         ><button class="bookeng" type="button">English Honeydew</button></a
       >
 
-    <a href="Mathematics" download><button class="bookeng">Mathematics book</button></a>
+    <a href="Mathematics/Mathematics.zip" download><button class="bookeng">Mathematics book</button></a>
   </body>
 </html>
