--- a/textbooks.html
+++ b/textbooks.html
@@ -40,9 +40,9 @@
   <body>
     <p class="title_subjects">English</p>
       <a href="English.zip" download
-        ><button class="bookeng" type="button">English Honeydew</button></a
+        ><button class="bookeng" type="button">English</button></a
       >
 
-    <a href="Mathematics/Mathematics.zip" download><button class="bookeng">Mathematics book</button></a>
+    <a href="Mathematics.zip" download><button class="bookeng">Mathematics book</button></a>
   </body>
 </html>
