--- a/textbooks.html
+++ b/textbooks.html
@@ -44,5 +44,6 @@
       >
 
     <a href="Mathematics.zip" download><button class="bookeng">Mathematics book</button></a>
+   <a href="Hindi.zip" download><button class="bookeng">Hindi book</button></a>
   </body>
 </html>
