--- a/studentslist.html
+++ b/studentslist.html
@@ -45,16 +45,68 @@
         <th>roll no.</th>
       </tr>
       <tr>
-        <td>Nitin Kamal.P.K</td>
+        <td>S.Adharsh</td>
+        <td>166218</td>
+      </tr>
+      <tr>
+        <td>D.Dhikshan</td>
+        <td>135571</td>
+      </tr>
+      <tr>
+        <td>K.Gokula Krishnan</td>
+        <td>135700</td>
+      </tr>
+      <tr>
+        <td>J.Harshavarman</td>
+        <td>186731</td>
+      </tr>
+      <tr>
+        <td>J.Joshuva</td>
+        <td>135523</td>
+      </tr>
+      <tr>
+        <td>N.S.Keerthivasan</td>
+        <td>Denied by student</td>
+      </tr>
+      <tr>
+        <td>S.A.Mitran</td>
+        <td>125104</td>
+      </tr>
+      <tr>
+        <td>P.K.Nitin Kamal</td>
         <td>125185</td>
+      </tr>
+      <tr>
+        <td>M.A.Praveen</td>
+        <td>125292</td>
+      </tr>
+      <tr>
+        <td>H.S.Saichiranjeevi</td>
+        <td>176417</td>
+      </tr>
+      <tr>
+        <td>P.S.Sanjay</td>
+        <td>156106</td>
+      </tr>
+      <tr>
+        <td>S.Srivarshan</td>
+        <td>125206</td>
+      </tr>
+      <tr>
+        <td>G.Shaswad</td>
+        <td>146079</td>
+      </tr>
+      <tr>
+        <td>S.R.Seshavardhan</td>
+        <td>125169</td>
+      </tr>
+      <tr>
+        <td>G.Tinakaran</td>
+        <td>125025</td>
       </tr>
       <tr>
         <td>Vishnu Vikram</td>
         <td>156177</td>
-      </tr>
-      <tr>
-        <td>P.S.Sanjay</td>
-        <td>123456</td>
       </tr>
     </table>
   </body>
