--- a/textbooks.html
+++ b/textbooks.html
@@ -45,5 +45,6 @@
 
     <a href="Mathematics.zip" download><button class="bookeng">Mathematics book</button></a>
    <a href="Hindi.zip" download><button class="bookeng">Hindi book</button></a>
+    <a href="Science.zip" download><button class="bookeng"> Science book </button> </a>
   </body>
 </html>
