--- a/textbooks.html
+++ b/textbooks.html
@@ -40,11 +40,12 @@
   <body>
     <p class="title_subjects">English</p>
       <a href="English.zip" download
-        ><button class="bookeng" type="button">English</button></a
+        ><button class="bookeng" type="button">Englishbook</button></a
       >
 
     <a href="Mathematics.zip" download><button class="bookeng">Mathematics book</button></a>
    <a href="Hindi.zip" download><button class="bookeng">Hindi book</button></a>
     <a href="Science.zip" download><button class="bookeng"> Science book </button> </a>
+    <a href="Social Science.zip" download><button class="bookeng">Social Science book</button></a>
   </body>
 </html>
