--- a/index.html
+++ b/index.html
@@ -8,27 +8,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>homepage</title>
     <p>
-      <a class="navbarhome" href="#"
-        ><button class="navbarhome" type="button">Home</button></a
-      >
-      <a class="navbaricon" href="subjects.html"
-        ><button class="navbaricons" type="button">subject notes</button></a
-      >
-      <a class="navbaricon" href="textbooks.html"
-         ><button class="navbaricons" type="button">text books</button></a
-      >
-      <a class="navbaricon" href="schedule for web.pdf" target="_blank"
-        ><button class="navbaricons" type="button">schedule</button></a
-      >
-      <a class="navbaricon" href="studentslist.html"
-        ><button class="navbaricons" type="button">students list</button></a
-      >
-      <a class="navbaricon" href="contact_us.html"
-        ><button class="navbaricons" type="button">contact us</button></a
-      >
-      <a class="navbaricon" href="about.html"
-        ><button class="navbaricons" type="button">About us</button></a
-      >
+      <div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a href="index.html">Home</a>
+    <a href="subjects.html">Subject Notes</a>
+    <a href="textbooks.html">Text Books</a>
+    <a href="studentslist.html">Students List</a>
+    <a href="contact_us.html">Contact Us</a>
+    <a href="about.html">About Us</a>
+  </div>
+</div>
+/* When the user clicks on the button,
+toggle between hiding and showing the dropdown content */
+function myFunction() {
+  document.getElementById("myDropdown").classList.toggle("show");
+}
+// Close the dropdown menu if the user clicks outside of it
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}
     </p>
     <p class="info" id="greeting"></p>
     <style>
