--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>homepage</title>
     <p>
       <div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+  <button onclick="myFunction()" class="dropbtn">Options</button>
   <div id="myDropdown" class="dropdown-content">
     <a href="index.html">Home</a>
     <a href="subjects.html">Subject Notes</a>
