--- a/index.html
+++ b/index.html
@@ -7,46 +7,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>homepage</title>
-    <p>
-      <div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">Options</button>
-  <div id="myDropdown" class="dropdown-content">
-    <a href="index.html">Home</a>
-    <a href="subjects.html">Subject Notes</a>
-    <a href="textbooks.html">Text Books</a>
-    <a href="studentslist.html">Students List</a>
+    <style>
+	/* Style The Dropdown Button */
+	.dropbtn {
+	  background-color: #FFAACC;
+	  color: grey;
+	  padding: 16px;
+	  font-size: 20px;
+	  cursor: pointer;
+	}
+
+	/*  position the dropdown content */
+	.dropdown {
+	  position: relative;
+	  display: inline-block;
+	}
+
+	/* Dropdown Content hidden by Default */
+	.dropdown-content {
+	  display: none;
+	  position: absolute;
+	  background-color: #CCCCCC;
+	  min-width: 160px;
+	  z-index: 1;
+	}
+
+	/* Links inside the dropdown */
+	.dropdown-content a {
+	  color: black;
+	  padding: 12px 16px;
+	  text-decoration: none;
+	  display: block;
+	}
+
+	/* Change color of dropdown links on hover */
+	.dropdown-content a:hover {
+	background-color: #11f111;
+	}
+
+	/* Show the dropdown menu on hover */
+	.dropdown:hover .dropdown-content {
+	  display: block;
+	}
+	
+</style>
+
+</head>
+<body>
+    <h2> Dropdown using CSS </h2>
+    <div class="dropdown">
+	  <button class="dropbtn">Dropdown</button>
+	  <div class="dropdown-content">
+		<a href="index.html">Home</a>
+		<a href="subjects.html">Subject notes</a>
+		<a href="textbooks.html">Textbook</a>
+    <a href="studentslist.html">Student list</a>
     <a href="contact_us.html">Contact Us</a>
     <a href="about.html">About Us</a>
-  </div>
-</div>
-    
-
-    </p>
-    <p class="info" id="greeting"></p>
-    <style>
-      .navbarhome {
-        font-size: large;
-        border-style: hidden;
-        border-bottom: 2px solid red;
-        border-radius: 5px;
-        margin-left: 1px;
-        transition: 0.3s;
-      }
-      .navbarhome :hover {
-        font-size: x-large;
-        border-color: blue;
-        border-width: 3px;
-        color: blue;
-        cursor: pointer;
-      }
-      .desc {
-        font-size: large;
-      }
-      .info {
-        color: orangered;
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      }
-    </style>
+	  </div>
+	</div>
   </head>
   <body>
     <h1>Welcome to class VIII-C educational website</h1>
