--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
     
     <div class="dropdown">
-	  <button class="dropbtn">Dropdown</button>
+	  <button class="dropbtn">Options</button>
 	  <div class="dropdown-content">
 		<a href="index.html">Home</a>
 		<a href="subjects.html">Subject notes</a>
