--- a/textbooks.html
+++ b/textbooks.html
@@ -47,5 +47,6 @@
    <a href="Hindi.zip" download><button class="bookeng">Hindi book</button></a>
     <a href="Science.zip" download><button class="bookeng"> Science book </button> </a>
     <a href="Social Science.zip" download><button class="bookeng">Social Science book</button></a>
+    <a href="class 8th Tamil_CBSE (1).pdf" download><button class="bookeng">Tamil</button></a>
   </body>
 </html>
