--- a/textbooks.html
+++ b/textbooks.html
@@ -16,37 +16,58 @@
       >
     </p>
     <style>
-      .bookeng {
-        width: 182px;
-        height: 182px;
-        border-radius: 15px;
-        cursor: pointer;
-        margin-left: 20px;
-        transition: 0.4s;
-        background-color: aqua;
-      }
-      .bookeng:hover {
-        width: 195px;
-        height: 195px;
-        border: 2px solid red;
-        filter: brightness(80%);
-      }
-      .title_subjects {
-        margin-left: 30px;
-        margin-bottom: 10px;
-      }
-    </style>
-  </head>
-  <body>
-    <p class="title_subjects">English</p>
-      <a href="English.zip" download
-        ><button class="bookeng" type="button">Englishbook</button></a
-      >
+	/* Style The Dropdown Button */
+	.dropbtn {
+	  background-color: #FFAACC;
+	  color: grey;
+	  padding: 16px;
+	  font-size: 20px;
+	  cursor: pointer;
+	}
 
-    <a href="Mathematics.zip" download><button class="bookeng">Mathematics book</button></a>
-   <a href="Hindi.zip" download><button class="bookeng">Hindi book</button></a>
-    <a href="Science.zip" download><button class="bookeng"> Science book </button> </a>
-    <a href="Social Science.zip" download><button class="bookeng">Social Science book</button></a>
-    <a href="class 8th Tamil_CBSE (1).pdf" download><button class="bookeng">Tamil</button></a>
-  </body>
+	/*  position the dropdown content */
+	.dropdown {
+	  position: relative;
+	  display: inline-block;
+	}
+
+	/* Dropdown Content hidden by Default */
+	.dropdown-content {
+	  display: none;
+	  position: absolute;
+	  background-color: #CCCCCC;
+	  min-width: 160px;
+	  z-index: 1;
+	}
+
+	/* Links inside the dropdown */
+	.dropdown-content a {
+	  color: black;
+	  padding: 12px 16px;
+	  text-decoration: none;
+	  display: block;
+	}
+
+	/* Change color of dropdown links on hover */
+	.dropdown-content a:hover {
+	background-color: #11f111;
+	}
+
+	/* Show the dropdown menu on hover */
+	.dropdown:hover .dropdown-content {
+	  display: block;
+	}
+	
+</style>
+
+</head>
+<body>
+    <div class="dropdown">
+	  <button class="dropbtn">Dropdown</button>
+	  <div class="dropdown-content">
+		<a href="English.zip" download>English</a>
+		<a href="Hindi.zip" download>Hindi</a>
+		<a href="Science.zip" download>Science</a>
+	  </div>
+	</div>
 </html>
