--- a/textbooks.html
+++ b/textbooks.html
@@ -63,11 +63,20 @@
 </head>
 <body>
     <div class="dropdown">
-	  <button class="dropbtn">Dropdown</button>
+	  <button class="dropbtn">Subjects</button>
 	  <div class="dropdown-content">
 		<a href="English.zip" download>English</a>
-		<a href="Hindi.zip" download>Hindi</a>
 		<a href="Science.zip" download>Science</a>
+		<a href="Social Science.zip" download>Social Science</a>
+		<a href="Mathematics.zip" download>Mathematics</a>
+		
+		
 	  </div>
 	</div>
+	    <div class="dropdown">
+	  <button class="dropbtn">tamil and hindi</button>
+	  <div class="dropdown-content">
+		<a href="Hindi.zip" download>Hindi</a>
+		<a href="class 8th Tamil_CBSE (1).pdf" download>Tamil</a>
+		
 </html>
