--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #ffffff;
+  background-color: #111;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -70,7 +70,7 @@ body {
   <a href="about.html">About us</a>
 </div>
 
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#ffffff; </span>
 
 
 <script>
