--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body {
   <a href="about.html">About us</a>
 </div>
 
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#ffffff; </span>
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#11111111; </span>
 
 
 <script>
