--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@ function closeNav() {
     <h1>Welcome to class VIII-C educational website</h1>
     <p class="desc">
       Press subject notes to get notes for every chapter, of every subject
+
+<br>
+      press the top left corner of this website for menu
     </p>
   </body>
   <script src="scripts.js"></script>
