--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>homepage</title>
+    <ver>1.5.3</ver>
     
 <style>
 body {
@@ -100,8 +101,8 @@ function closeNav() {
     <p class="desc">
       Press subject notes to get notes for every chapter, of every subject
 
-<br>
-      press the top left corner of this website for menu
+
+
     </p>
   </body>
   <script src="scripts.js"></script>
