--- a/textbooks.html
+++ b/textbooks.html
@@ -72,9 +72,11 @@
 	  </div>
 	</div>
 	    <div class="dropdown">
-	  <button class="dropbtn">tamil and hindi</button>
+	  <button class="dropbtn">Social Science</button>
 	  <div class="dropdown-content">
-		<a href="Hindi.zip" download>Hindi</a>
-		<a href="class 8th Tamil_CBSE (1).pdf" download>Tamil</a>
+		<a href="hess201.zip" download>History (chapter 1 to 5)</a>
+		<a href="hess206.zip" download>History (chapter 6 to 10)</a>
+		<a href="hess201.zip" download>History (chapter 1 to 5)</a>
+		
 		
 </html>
