--- a/textbooks.html
+++ b/textbooks.html
@@ -76,7 +76,9 @@
 	  <div class="dropdown-content">
 		<a href="hess201.zip" download>History (chapter 1 to 5)</a>
 		<a href="hess206.zip" download>History (chapter 6 to 10)</a>
-		<a href="hess201.zip" download>History (chapter 1 to 5)</a>
+		<a href="hess301.zip" download>Civics (chapter 1 to 5)</a>
+		<a href="hess306.zip" download>Civics (chapter 6 to 10)</a>
+		<a href="hess4dd.zip" download>Geography </a>
 		
 		
 </html>
