--- a/textbooks.html
+++ b/textbooks.html
@@ -79,6 +79,15 @@
 		<a href="hess301.zip" download>Civics (chapter 1 to 5)</a>
 		<a href="hess306.zip" download>Civics (chapter 6 to 10)</a>
 		<a href="hess4dd.zip" download>Geography </a>
+		  </div>
+		</div>
+	<a href="Hindi.zip" download><button class="bookeng">Hindi </button></a>
+	<a href="Science.zip" download><button class="bookeng">Science</button></a>
+	<a href="Mathematics.zip" download><button class="bookeng">Maths </button></a>
+	<a href="class 8th Tamil_CBSE (1).pdf" download><button class="bookeng">Tamil</button></a>
+	
+		
+	
 		
 		
 </html>
