--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body {
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="index.html">Home</a>
   <a href="subjects.html">Subject notes</a>
-  <a href="uip.html">Textbook</a>
+  <a href="textbooks.html">Textbook</a>
   <a href="studentslist.html">Student list</a>
   <a href="contact_us.html">Contact Us </a>
   <a href="about.html">About us</a>
