--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ body {
   <a href="studentslist.html">Student list</a>
   <a href="contact_us.html">Contact Us </a>
   <a href="about.html">About us</a>
+  <a href="https://lachat.clobas.com" target="_blank"> our school website </a>
 </div>
 
   <span style="font-size:30px;cursor:pointer" onclick="openNav()"><img class="menuopener" src="menu-outline.svg"></span>
