--- a/index.html
+++ b/index.html
@@ -98,11 +98,12 @@ function closeNav() {
   <body>
     <h1>Welcome to class VIII-C educational website</h1>
     <p class="desc">
-      Press subject notes to get notes for every chapter, of every subject
+      Press subject notes to get notes for every chapter, of every subject 
 
 
 
     </p>
+    <version>1.6.0</version>
   </body>
   <script src="scripts.js"></script>
 </html>
