--- a/textbooks.html
+++ b/textbooks.html
@@ -19,10 +19,16 @@
 	/* Style The Dropdown Button */
 	.dropbtn {
 	  background-color: #FFAACC;
-	  color: grey;
+	  color: green;
 	  padding: 16px;
 	  font-size: 20px;
 	  cursor: pointer;
+          border-radius: 10px;
+	  border: 2px solid blue;
+	}
+	.dropbtn:hover {
+	  border: 2px solid blue;
+          font-size: 25px;
 	}
 
 	/*  position the dropdown content */
@@ -35,9 +41,10 @@
 	.dropdown-content {
 	  display: none;
 	  position: absolute;
-	  background-color: #CCCCCC;
+	  background-color: #0377fc;
 	  min-width: 160px;
 	  z-index: 1;
+	  border-radius: 8px;
 	}
 
 	/* Links inside the dropdown */
@@ -50,7 +57,7 @@
 
 	/* Change color of dropdown links on hover */
 	.dropdown-content a:hover {
-	background-color: #11f111;
+	background-color: #254973;
 	}
 
 	/* Show the dropdown menu on hover */
